--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/webpacker": "4.3.0",
     "jquery": "^3.6.0",
     "rails-ujs": "^5.2.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
